# numpydoc-validation

./: README.md  pyproject.toml
.github/workflows/: testing-and-deployment.yml
numpydoc_validation/: __init__.py  _validate.py
